Fix: Corrected scrollbar height

--- a/demo/html5/v2/extended/player.ybrid.css
+++ b/demo/html5/v2/extended/player.ybrid.css
@@ -46,6 +46,7 @@ h1 {
 
 ::-webkit-scrollbar {
 	width: 6px;
+	height: 6px;
 }
 
 ::-webkit-scrollbar-track {
